--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
 	<h1>С Днем Рождения Мама!</h1>
-	<p>Всего лучшего в этот перкрасный день!</p>
+	<p>Всего лучшего в этот прекрасный день!</p>
 	<img src="https://sun9-31.userapi.com/impg/f1uBrWXw3649cz7hHTd_2m4LfDhy5a8Soa1v7w/kYKLvyzVjIA.jpg?size=2560x987&quality=96&sign=982d334d95b05b15356b4455634bee05&type=album" alt="Happy Birthday">
 </body>
 </html>
